--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&family=Lato:wght@300&family=Oswald:wght@300&family=PT+Sans&family=Poppins:wght@500&display=swap');
+
 body{
-    font-family: Arial
+    font-family: Poppins, sans-serif;
+    font-weight: 200;
 } 
