--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,24 @@ h1, h2 {
     letter-spacing: 2px;
     font-color: black;
 }
+
+#logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
+    height: 12%;
+}
+
+/* Nav links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 3px;
+}
+
+#menu-li {
+    float: right;
+    list-style-type: none;
+    margin-right: 20px;
+}
