--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,10 +33,11 @@ h1, h2 {
 #menu {
     font-size: 110%;
     letter-spacing: 3px;
+    margin: 1%;
 }
 
 #menu-li {
     float: right;
     list-style-type: none;
-    margin-right: 20px;
+    margin-right: 200px;
 }
