--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,8 +22,8 @@ h1, h2 {
 
 #logo {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 2;
+    left: 2;
     width: auto;
     height: 12%;
 }
@@ -31,13 +31,17 @@ h1, h2 {
 /* Nav links */
 
 #menu {
-    font-size: 110%;
-    letter-spacing: 3px;
+    list-style-type: none;
+    font-size: 150%;
+    letter-spacing: 1px;
     margin: 1%;
+    text-align: right;
+    float: right;
+    margin-right: 20px;
 }
 
-#menu-li {
-    float: right;
+#menu li {
     list-style-type: none;
-    margin-right: 200px;
+    display: inline-block;
+    margin-right: 10px
 }
