--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,3 +45,14 @@ h1, h2 {
     display: inline-block;
     margin-right: 10px
 }
+
+#menu li a {
+    color: black;
+    text-decoration: none;
+}
+
+#menu li a:hover {
+    text-decoration: underline;
+    font-size:102%;
+    margin: 0%;
+}
