--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&family=Lato:wght@300&family=Oswald:wght@300&family=PT+Sans&family=Poppins:wght@500&display=swap');
 
 * {
-    margin: 1;
-    padding:0;
+    margin: 1px;
+    padding:0px;
     border: none;
 }
 
 body{
     font-family: Oswald, sans-serif;
     font-weight: 200;
-    font-color: rgb(17, 17, 17)
+    font-color: black;
+    background-color: rgb(5, 66, 70);
 } 
 
 /* headings and logo */
+
+header {
+    border-bottom: 1px solid black;
+    background-color: grey;
+    display: inline-block;
+
+}
 
 h1, h2 {
     font-family: Poppins, Arial;
@@ -25,25 +33,27 @@ h1, h2 {
     top: 2;
     left: 2;
     width: auto;
-    height: 12%;
+    height: 10%;
+    float: left;
 }
 
 /* Nav links */
 
 #menu {
     list-style-type: none;
-    font-size: 150%;
-    letter-spacing: 1px;
-    margin: 1%;
-    text-align: right;
-    float: right;
-    margin-right: 20px;
+    font-size: 180%;
+    letter-spacing: 2px;
+    margin: 0%;
+    text-align: center;
+    position: absolute;
+    right: 8px;
 }
 
 #menu li {
     list-style-type: none;
     display: inline-block;
-    margin-right: 14px
+    margin-right: 15px;
+    float: right;
 }
 
 #menu li a {
@@ -51,20 +61,12 @@ h1, h2 {
     text-decoration: none;
 }
 
-#menu li.active {
-    font-weight: bold;
-}
-
 ul li {
     transition: transform 0.75s;
 }
 
 ul li:hover {
-    transform: scale(1.2);
+    transform: scale(1.12);
     font-weight: bold;
 }
 
-header {
-    border-bottom: 3px solid black;
-    background-color: grey;
-}
