--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Grandiflora+One&family=Lato:wght@300&family=Oswald:wght@300&family=PT+Sans&family=Poppins:wght@500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Grandiflora+One&family=Lato:wght@300&family=Oswald:wght@300&family=PT+Sans&family=Poppins:wght@500&display=swap');
 * {
-    margin: 1px;
+    margin: 3px;
     padding:0px;
     border: none;
 }
@@ -10,15 +9,13 @@ body{
     font-family: Oswald, sans-serif;
     font-weight: 200;
     font-color: black;
-    background-color: rgb(5, 66, 70);
+    background-color: rgb(255, 255, 255)255);
 } 
 
 /* headings and logo */
 
 header {
-    border-bottom: 1px solid black;
     background-color: grey;
-    display: inline-block;
 
 }
 
@@ -49,6 +46,10 @@ h1, h2 {
     right: 8px;
 }
 
+#menu #logo {
+    line-height: 150px;
+}
+
 #menu li {
     list-style-type: none;
     display: inline-block;
@@ -70,3 +71,33 @@ ul li:hover {
     font-weight: bold;
 }
 
+/* Section 1, bio */
+
+#bio {
+    padding-top: 4%;
+    padding-left: 1%;
+    width: 100%;
+    height: auto;
+    background-color: #f2f2f2;
+    text-align: left;
+    border-top: 500;
+}
+
+#bio img{
+    display: block;
+    border-radius: 60%;
+    border: 5px solid black;
+    border-color: black;
+    width: 20%;
+    float: left;
+    
+}
+
+#bio p {
+    font-family: dancing script;
+    float: right;
+
+    font-size: 118px;
+    font-weight: bold;
+    color: #333;
+}
