--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,49 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Grandiflora+One&family=Lato:wght@300&family=Oswald:wght@300&family=PT+Sans&family=Poppins:wght@500&display=swap');
+
 * {
-    margin: 3px;
-    padding:0px;
-    border: none;
+    margin: 0px;
+    padding:1px;
+    border: 1px;
 }
 
 body{
     font-family: Oswald, sans-serif;
     font-weight: 200;
     font-color: black;
-    background-color: rgb(255, 255, 255)255);
 } 
 
 /* headings and logo */
 
-header {
-    background-color: grey;
-
-}
-
 h1, h2 {
     font-family: Poppins, Arial;
     letter-spacing: 2px;
-    font-color: black;
+    color: black;
 }
 
 #logo {
-    position: absolute;
-    top: 2;
-    left: 2;
-    width: auto;
-    height: 10%;
     float: left;
+    width: 8%;
 }
 
 /* Nav links */
 
 #menu {
-    list-style-type: none;
     font-size: 180%;
     letter-spacing: 2px;
-    margin: 0%;
-    text-align: center;
-    position: absolute;
-    right: 8px;
 }
 
 #menu #logo {
@@ -58,8 +44,8 @@ h1, h2 {
 }
 
 #menu li a {
-    color: black;
     text-decoration: none;
+    color: black;
 }
 
 ul li {
@@ -74,30 +60,19 @@ ul li:hover {
 /* Section 1, bio */
 
 #bio {
-    padding-top: 4%;
-    padding-left: 1%;
-    width: 100%;
-    height: auto;
-    background-color: #f2f2f2;
-    text-align: left;
-    border-top: 500;
-}
+    height: 100px;
+};
 
-#bio img{
-    display: block;
-    border-radius: 60%;
-    border: 5px solid black;
-    border-color: black;
-    width: 20%;
+#left-about {
+    padding-top: 30px;
+    width:33%;
     float: left;
-    
+    background-color: blue;
 }
 
-#bio p {
-    font-family: dancing script;
+#right-about {
+    padding-top: 30px;
+    width: 60%;
     float: right;
-
-    font-size: 118px;
-    font-weight: bold;
-    color: #333;
+    background-color: red;
 }
