--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,57 @@ ul li:hover {
     border: 2px;
     padding: 1.5%;
 }
+
+/* Portrait Gallery */
+
+#portrait-gallery {
+
+    image-rendering: optimizeSpeed;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    padding-left: 0.5%;
+    padding-right: 0.5%;
+}
+
+#portrait-gallery img {
+    justify-content: space-around;
+    width: 33%;
+}
+
+#portrait-gallery img:hover {
+    transform: scale(1.2);
+}
+
+#portrait-about {
+    font-size: small;
+    font-weight: 900%;
+    border: 2px;
+    padding: 1.5%;
+}
+
+/* Circus Gallery */
+
+#circus-gallery {
+
+    image-rendering: optimizeSpeed;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    padding-left: 0.5%;
+    padding-right: 0.5%;
+}
+
+#circus-gallery img {
+    justify-content: space-around;
+    width: 33%;
+}
+
+#circus-gallery img:hover {
+    transform: scale(1.2);
+}
+
+#circus-about {
+    font-size: small;
+    font-weight: 900%;
+    border: 2px;
+    padding: 1.5%;
+}
