--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,11 +105,10 @@ ul li:hover {
 
 /* footer */
 
-#footer {
-    background-color: white;
+footer {
+    background: white;
     display: inline-block;
     justify-content: space-between;
-    background-color: grey;
 }
 
 #instagram,
@@ -220,8 +219,12 @@ ul li:hover {
 
 /*form */
 form {
-    width: 60%;
-    margin: 0 auto;
+        width: 50%;
+        height: auto;
+        margin: 0 auto;
+        margin-top: 2%;
+        font-size: 18px;
+        margin-bottom: 2%;
 }
 
 label {
