--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ ul li:hover {
 #bio {
     height: 300px;
     background-color: black;
+    align-items: center;
 }
 
 #profile-photo img {
@@ -89,11 +90,9 @@ ul li:hover {
     margin: 16px;
     border: 3px solid black;
     display: flex;
-    justify-content: center;
 }
 
 #bio-line {
-    float: right;
     font-size: 120%;
     padding-top: 10px;
     padding-left: 20px;
@@ -231,4 +230,52 @@ label {
     color: white;
     display: block;
     margin-top: 10px;
+}
+
+/* media-queries */
+
+@media (max-width: 768px) {
+    #logo {
+        width: 80px;
+    }
+
+    #menu ul li {
+        margin-right: 5px;
+    }
+
+    #profile-photo img {
+        width: 150px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    #menu ul li {
+        margin-right: 0;
+        margin-bottom: 5px;
+    }
+
+    #bio {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    #profile-photo img {
+        width: 120px;
+    }
+
+    #bio-line {
+        margin-left: 0;
+        margin-top: 10px;
+        text-align: center;
+    }
+
+    .footer {
+        padding: 5px;
+    }
 }
