--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,6 @@ ul li:hover {
 /* Section 1, bio */
 
 #bio {
-    height: 300px;
     background-color: black;
     align-items: center;
 }
@@ -106,8 +105,8 @@ ul li:hover {
 
 footer {
     background: white;
-    display: inline-block;
-    justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 
 #instagram,
@@ -117,7 +116,7 @@ footer {
     justify-content: center;
     margin-top: 1%;
     margin-bottom: 2%;
-    margin-right: 35px;
+    margin-right: 185px;
 }
 
 #instagram {
@@ -218,12 +217,12 @@ footer {
 
 /*form */
 form {
-        width: 50%;
-        height: auto;
-        margin: 0 auto;
-        margin-top: 2%;
-        font-size: 18px;
-        margin-bottom: 2%;
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 2%;
+    font-size: 18px;
+    margin-bottom: 2%;
 }
 
 label {
