--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,6 @@ header {
     justify-content: space-between;
 }
 
-#menu #logo {
-    line-height: 150px;
-}
-
 #menu li {
     list-style-type: none;
     display: inline-block;
@@ -112,27 +108,31 @@ footer {
 #instagram,
 #facebook,
 #contact {
-    display: inline-block;
+    display: flex;
     justify-content: center;
     margin-top: 1%;
     margin-bottom: 2%;
-    margin-right: 185px;
 }
 
 #instagram {
     width: 40px;
     height: 40px;
+    padding: 20 px;
 }
 
 #facebook {
     width: 40px;
     height: 40px;
+    padding: 20 px;
 }
 
 #contact {
     width: 39px;
     height: 39px;
+    padding: 20 px;
 }
+
+
 
 /* music gallery page */
 
