--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ h2 {
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
     background-color: white;
 }
 
@@ -50,6 +52,7 @@ header {
     letter-spacing: 2px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 #menu li {
@@ -57,6 +60,7 @@ header {
     display: inline-block;
     margin-right: 15px;
     margin-top: 12px;
+    white-space: nowrap;
 }
 
 #menu li a {
@@ -78,6 +82,8 @@ ul li:hover {
 #bio {
     background-color: black;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #profile-photo img {
@@ -260,48 +266,37 @@ input[type="submit"]:hover {
 
 /* media-queries */
 
-@media (max-width: 768px) {
-    #logo {
-        width: 80px;
-    }
 
-    #menu ul li {
-        margin-right: 5px;
-    }
-
+@media (max-width: 1200px) {
     #profile-photo img {
-        width: 150px;
+        width: 60%;
     }
 }
 
-@media (max-width: 480px) {
-    header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    #menu ul li {
-        margin-right: 0;
-        margin-bottom: 5px;
-    }
-
-    #bio {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 10px;
-    }
-
+@media (max-width: 992px) {
     #profile-photo img {
-        width: 120px;
+        width: 70%;
+    }
+}
+
+@media (max-width: 768px) {
+    #profile-photo img {
+        width: 80%;
+    }
+}
+
+@media (max-width: 576px) {
+    #profile-photo img {
+        width: 90%;
     }
 
-    #bio-line {
-        margin-left: 0;
-        margin-top: 10px;
-        text-align: center;
+    #music-gallery img,
+    #portrait-gallery img,
+    #circus-gallery img {
+        width: 100%;
     }
 
-    .footer {
-        padding: 5px;
+    form {
+        width: 80%;
     }
 }
