--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,10 @@ h2 {
 
 }
 
+p{
+    color: white;
+}
+
 /* Nav links */
 
 header {
@@ -263,6 +267,40 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
+/* thank you page */
+
+/* thank you page */
+
+#thank-you-images {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+    padding: 10px;
+  }
+  
+  #thank-you-images a {
+    width: 33.33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #thank-you-images img {
+    width: 75%;
+    height: 100%;
+    display: block;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid white;
+    overflow: hidden; 
+  }
+  
+  #thank-you-images p {
+    font-size: 48px;
+    text-align: center;
+    margin: 10px;
+  }
+  
 
 /* media-queries */
 
